--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: "Arial", "Meiryo" sans-serif;
+  font-family: "Arial", "Meiryo", sans-serif;
   text-align: center;
 }
 
